test/tests/compiler/18_structures/invalid_types/scalar_required/and_struct.plx
type struc s(    a: i32    )

pub fn main(none) i32 {
    x: struc s = $(true)
    return 0 and x #  can't apply boolean operators to structs
}
